--- a/Java/一.数据类型.md
+++ b/Java/一.数据类型.md
@@ -21,7 +21,9 @@
 
 1. 在运行前数据超过取值范围，将提示错误“不兼容类型”
 
-2. 在运行时超出取值范围，将从下限开始向上增加，超过后继续从下限向上增加，不停循环
+2. 默认值取决于系统，当前列表中的默认值仅仅在MacOS环境中的值
+
+3. 在运行时超出取值范围，将从下限开始向上增加，超过后继续从下限向上增加，不停循环
 
    <!--实现-->
 
@@ -60,8 +62,8 @@
    -128
    */
    ```
-   
-3. 因为所有数据类型在所有机器中的大小都是相同的，内存管理的细节都交给Java Virtual Machine（JVM）处理，因此没有sizeof方法
+
+4. 因为所有数据类型在所有机器中的大小都是相同的，内存管理的细节都交给Java Virtual Machine（JVM）处理，因此没有sizeof方法
 
 ### 1.2 原码反码补码
 
@@ -324,6 +326,47 @@ public class Main {
     - 在一些类库当中这个方法被重写了，如String、Integer、Date，比较对象的成员变量值是否相同
   
     > default:equals方法重写后，需要重写hash方法
+  
+- CompareTo方法
+
+  - 规则
+
+    - 通过字典进行查询，如果相同则返回零，不然返回相差的大小
+
+    - 如果是字符串，则返回第一个不同的字符的差
+
+      <!--源码-->
+
+      ```java
+      public static int compareTo(byte[] value, byte[] other, int len1, int len2) {
+              int lim = Math.min(len1, len2);
+              for (int k = 0; k < lim; k++) {
+                  if (value[k] != other[k]) {
+                    // 如果出现第一个不同，则返回两个的差值
+                      return getChar(value, k) - getChar(other, k);
+                  }
+              }
+              return len1 - len2;
+          }
+      ```
+
+      <!--实现-->
+
+      ```java
+      public class Test1 {
+          public static void main(String[] args) {
+              String s1 = "aa";
+              String s2 = "cc";
+              System.out.println(s1.compareTo(s2));
+          }
+      }
+      /* output
+      -2
+      */
+      /* conclusion
+      1.仅仅比较了第一个不同值的大小
+      */
+      ```
 
 ### 4.3 构建字符串
 
@@ -398,6 +441,52 @@ public class Main {
        
        2.StringBuffer类中的修改方法都会将toStringCache设置为null，在toString中判断toStringCache是否为null，为null说明已经被修改，否则将返回最新值
        ```
+
+### 4.4 命令行获取字符串数组转换
+
+- 场景：将命令行获取到的字符串数组转换成整数类型
+
+- 实现
+
+  ```java
+  import java.lang.StringBuffer;
+  
+  public class Test01 {
+      public static void main(String[] args) {
+          StringBuilder sb = new StringBuilder();
+          for (String arg : args) {
+              sb.append(arg);
+          }
+          String str = sb.toString();
+          int i = Integer.parseInt(str);
+          System.out.println(i);
+      }
+  }
+  ```
+
+### 4.5 转义符
+
+- 规则
+
+  - 使用“\”来声明即将输入特殊内容，将进行转义
+
+    <!--实现-->
+
+    ```java
+    public class Test1 {
+        public static void main(String[] args) {
+            String s3 = "is just a \n abc";
+            String s4 = "is just a \' ";
+            System.out.println(s3);
+            System.out.println(s4);
+        }
+    }
+    /* output
+    is just a 
+     abc
+    is just a ' 
+    */
+    ```
 
 ## 5. 大数值
 
