--- a/Java/二.基本语法.md
+++ b/Java/二.基本语法.md
@@ -521,7 +521,7 @@ x,y,z3
 
 - 规则
 
-  1. 先执行statement，然后进行判断
+  1. 先执行statement，然后进行判断，如果为true则再次执行do，并进入循环
   2. 相比于while，区别是do-while循环至少会执行一次statement
   3. while使用率高于do-while
 
@@ -540,6 +540,8 @@ x,y,z3
 
   - initialization仅首次生效
 
+  - for循环中定义的内容仅在for循环中有效（如int i = 0）
+
   - **迭代先执行Boolean expression，true后执行statement，再执行step，此为一个循环；**
 
   - **break是终止当前所在循环，continue是终止本次循环，重新进行下一次循环**
@@ -547,7 +549,7 @@ x,y,z3
   - 循环中的label标签，使得在循环嵌套中，break和continue退出到指定的循环
 
     <!--实现：使用循环嵌套和label标签实现输出100以内的素数-->
-
+  
     ```java
     package four;
     import static util.StaticPrint.*;
