--- a/Java/一.数据类型.md
+++ b/Java/一.数据类型.md
@@ -221,6 +221,14 @@ public class Main {
 - BIgInteger：任意精度的整数
 - BigDecimal：任何精度的定点数 <!--可以用于精确的货币计算-->
 
+### 1.6 正则表达式
+
+- 表示两位小数的正数
+
+  ```java
+  isChar = item.matches("^[0-9]+(\\.[0-9]{1,2})?$");
+  ```
+
 ## 2. 引用类型
 
 ### 2. 1基本概念
