--- a/Java/六.关键字.md
+++ b/Java/六.关键字.md
@@ -469,9 +469,13 @@ public class TestPrint {
 
 - 规则
 
-  除包含该成员的类之外，任何其他类都无法访问这个成员 
+  - 除包含该成员的类之外，任何其他类都无法访问这个成员 
 
-  <!--即使其他类中获取含有private方法的对象，该对象也无法调用private方法，需要明确类和对象-->
+    <!--即使其他类中获取含有private方法的对象，该对象也无法调用private方法，需要明确类和对象-->
+
+  - 超类中private修饰的成员变量，子类只有拥有权，没有使用权。
+
+    <!--只能通过父类中的get和set方法，无法直接访问-->
 
 - 用途
 
