--- a/Java/四.复用类.md
+++ b/Java/四.复用类.md
@@ -3,8 +3,10 @@
 ## 1. 复用
 
 - 分类
-  - 组合：在新的类中生成现有类的对象
-  - 继承：按照现有类的类型创造新类，采用现有类的形式并添加新代码
+  - 组合(Composition)：在新的类中生成现有类的对象
+  - 继承(Inheritance)：按照现有类的类型创造新类，采用现有类的形式并添加新代码
+- 区别
+  - Composition means "one object is a part of another object"; Inheritance means "one object is a kind of other object"
 
 ## 2. 组合
 
@@ -80,6 +82,10 @@ public class Reference1 {
   - 类不能多继承，但支持多层继承
 
     原因是：子类多继承后，如果存在名称相同的方法，无法确定执行
+    
+  - 超类中private修饰的成员变量，子类只有拥有权，没有使用权。
+  
+    <!--只能通过父类中的get和set方法，无法直接访问-->
 
 ### 3.2 向上转型
 
@@ -152,10 +158,11 @@ class Super{}
     4 return
     ```
     
+
 <!--解析-->
     
     1. 子类的构造函数反编译中，对超类进行了初始化
-  
+
   - 如果基类中有带参数的构造器，没有默认的构造器，或者是想调用基类的含参构造器，需要使用super(参数)方法来调用基类的含参构造器，并放在构造器起始位置。
   
     <!--验证-->
@@ -170,7 +177,7 @@ class Super{}
     ```
 
     ```java
-  // 基类的子类
+    // 基类的子类
     public class Drawing extends Art{
         Drawing(int i){
           	// 调用基类的有参构造器，super(s)将s的值传输到基类中使用
@@ -182,7 +189,7 @@ class Super{}
     ```
   
     ```java
-  // 基类的子类的子类
+    // 基类的子类的子类
     public class Cartoon extends Drawing {
             Cartoon(int i){
             		super(i)
@@ -194,8 +201,9 @@ class Super{}
     }/* output
     Art Constructor:11
     Drawing Constructor:11
-  Cartoon Constructor:11
+    Cartoon Constructor:11
     */
+    ```
   ```
   
 - 子类的构造函数第一行也能通过this来访问本类中的构造函数，但是必定有本类中的构造函数会访问父类的构造函数。同时this和super都必须在第一行
@@ -208,8 +216,8 @@ class Super{}
         };
     }
   
-    ```
-  
+  ```
+
     ```java
     // 基类的子类
     public class Drawing extends Art{
@@ -225,7 +233,7 @@ class Super{}
       }
     }
     ```
-  
+
 
 ### 3.4 组合和继承选择
 
