--- a/Neural Network/6.第一个深度神经网络：反向传播.md
+++ b/Neural Network/6.第一个深度神经网络：反向传播.md
@@ -177,7 +177,7 @@ streetlights = np.array([
 ])
 walk_vs_stop = np.array([1, 1, 0, 0]).T
 
-# Weights，随机生成两组权重，分别两层
+# Weights，随机生成两组权重，分别两层。最后减一的目的是使得随机权重小于1
 weights_0_1 = 2 * np.random.random((3, hidden_size)) - 1
 weights_1_2 = 2 * np.random.random((hidden_size, 1)) - 1
 
@@ -185,18 +185,18 @@ weights_1_2 = 2 * np.random.random((hidden_size, 1)) - 1
 for iter in range(60):
     layer_2_error = 0
     for i in range(len(streetlights)):
-        layer_0 = streetlights[i:i+1]
-        layer_1 = relu(np.dot(layer_0,weights_0_1))
-        layer_2 = np.dot(layer_1,weights_1_2)
+        layer_0 = streetlights[i:i+1] # [1,3]
+        layer_1 = relu(np.dot(layer_0,weights_0_1)) # [1,4] = [1,3] * [3,4]
+        layer_2 = np.dot(layer_1,weights_1_2) # [1] = [1,4] * [4,1]
 
-        layer_2_error += np.sum((layer_2 - walk_vs_stop[i]) ** 2)
+        layer_2_error += np.sum((layer_2 - walk_vs_stop[i]) ** 2) # [1]
 
-        layer_2_delta = walk_vs_stop[i:i+1] - layer_2
+        layer_2_delta = walk_vs_stop[i:i+1] - layer_2 # [1]
         # 关键步骤
-        layer_1_delta = layer_2_delta.dot(weights_1_2.T)*relu2deriv(layer_1)
+        layer_1_delta = layer_2_delta.dot(weights_1_2.T)*relu2deriv(layer_1) # [1,4] = [1] * [1,4]
 
-        weights_1_2 += alpha * layer_1.T.dot(layer_2_delta)
-        weights_0_1 += alpha * layer_0.T.dot(layer_1_delta)
+        weights_1_2 += alpha * layer_1.T.dot(layer_2_delta) # [4,1] += [4,1] * [1].这就是为什么“ layer_1.T.dot”需要T的原因
+        weights_0_1 += alpha * layer_0.T.dot(layer_1_delta)	# [3,4] += [3,1] * [1,4].这就是为什么“ layer_0.T.dot”需要T的原因
     if(iter % 10 == 9):
         print("Error:" + str(layer_2_error))
 ```
@@ -207,5 +207,10 @@ for iter in range(60):
  1.设计负权重关闭的函数
  2.上一层的权重增量为权重乘以输出增量：layer_1_delta = layer_2_delta.dot(weights_1_2.T)*relu2deriv(layer_1)
  3.当前层的权重变化：当前层的权重+alpha*（当前层的input值*下一层的delta）
+2.Q&A
+ 1."layer_1.T"中的T的作用是转置。详情见 NumPy.md
+ 2."weights_0_1 = 2 * np.random.random((3, hidden_size)) - 1",最后减一的目的是使得随机权重小于1。
+ 3."return (x > 0) * x"，python中true与1等值，false与0等值。
+ 4."weights_1_2 += alpha * layer_1.T.dot(layer_2_delta) # [4,1] += [4,1] * [1].这就是为什么“ layer_1.T.dot”需要T的原因"
 ```
 
