--- a/Java/五.多态.md
+++ b/Java/五.多态.md
@@ -358,6 +358,8 @@
 
   - 实现
 
+    <!--两个类-->
+    
     ```java
     //	超类
     class Father {
@@ -390,6 +392,30 @@
     /* output
     son method1
     father method2
+    */
+    ```
+    
+    <!--三个类-->
+    
+    ```java
+    public class Test {
+        public static void main(String[] args) {
+            Father father = new Son();
+            father.method();
+        }
+    }
+    class Grand{}
+    
+    class Father extends Grand{
+        public void method(){}
+    }
+    
+    class Son extends Father{}
+    ```
+    
+    ```java
+    /* Analyse
+    1.不会出现编译错误，因为前期绑定，所以会去寻找Father类中是否存在method()的方法
     */
     ```
 
