--- a/Neural Network/8.学习信号，忽略噪声：正则化和批处理介绍.md
+++ b/Neural Network/8.学习信号，忽略噪声：正则化和批处理介绍.md
@@ -1,2 +1,29 @@
 # 8.学习信号，忽略噪声：正则化和批处理介绍
 
+## 8.4 过拟合
+
+- 现象：过度训练神经网络，导致测试样例失效。
+
+- 原因：神经网络学习到了数据集中的噪音，而不是仅基于真实的信号作出的决策。
+
+  <!--比如，图片识别狗，如果根据狗的轮廓能分辨是是否为狗，则狗的轮廓是真实的信号，而填充狗的部分像素属于噪音-->
+
+- 解决方法：正则化（包括提前停止，dropout等），更换梯度下降方法（批量梯度下降）。
+
+## 8.6 正则化
+
+- Definition：使模型泛化到新的数据点（而不仅是记忆训练数据）的方法的子领域。
+- 方法
+  1. 提前停止：训练集训练神经网络，再添加验证集来控制训练过程。
+  2. Dropout
+
+### Dropout
+
+- Definition：在训练过程中随机关闭神经元。使得一张大的神经网络像小神经网络一样学习，而小神经网络不会发生过拟合。
+
+  <!--比如，用沙子去拟合叉子，能够勾勒出每一个细节，导致过拟合。如果是硬币大小的粘土拟合叉子，一个硬币肯定不够，就会从单个硬币上尽可能的找重点，由多个硬币大小的粘土来拟合叉子防止过拟合。-->
+
+- Implementation <u>见深度学习图解P138</u>
+
+  将某个神经元乘以由1，0组成的随机矩阵。被0乘的相当于关闭的神经元。
+
