--- a/Java/六.关键字.md
+++ b/Java/六.关键字.md
@@ -103,6 +103,25 @@
   - 实现不创建对象的前提下，通过类本身来调用static方法
   - 方法不需要访问对象状态，所需参数都是通过显示参数提供 <!--比如Math.pow-->
   - 方法只需要访问类的静态域 <!--比如返回静态域内容的get方法-->
+  
+- Example
+
+  <!--比较何时使用静态方法-->
+
+  ```java
+  // 方法一
+  Integer.parseInt();
+  // 方法二
+  File file = new File();
+  file.readline();
+  ```
+
+  ```shell
+  # Analyse
+  1.方法一是转换。
+  2.方法二是读取文件。
+  3.file的readline不是static方法的原因是：需要存储数据，并且可以新建多个file对象来读取不同数据。而string转int的方法，仅仅就是转换。
+  ```
 
 ### 1.5 工厂方法
 
