--- a/Neural Network/10.卷积神经网络概论：关于边与角的神经学习.md
+++ b/Neural Network/10.卷积神经网络概论：关于边与角的神经学习.md
@@ -127,8 +127,9 @@
   
   # 6.获取卷积核对应的数据的函数
   def get_image_section(layer, row_from, row_to, col_from, col_to):
-      section = layer[:, row_from:row_to, col_from:col_to]  # Important：这是三维数组
-      return section.reshape(-1, 1, row_to - row_from, col_to - col_from) # fix：为什么使用四维数组
+      section = layer[:, row_from:row_to, col_from:col_to]  # Important：这是三维数组 [128,3,3]
+      return section.reshape(-1, 1, row_to - row_from, col_to - col_from)  # fix
+      # ：为什么使用四维数组:用于计算Feature map的总数
   
   
   # 7.Training
@@ -137,41 +138,44 @@
       for i in range(int(len(images) / batch_size)):  # 批量梯度下降，因此分批循环
           batch_start, batch_end = ((i * batch_size), (i + 1) * batch_size)
           layer_0 = images[batch_start:batch_end]  # [128,784]
-          layer_0 = layer_0.reshape(layer_0.shape[0], 28, 28) # [128,28,28]三维数组
+          layer_0 = layer_0.reshape(layer_0.shape[0], 28, 28)  # [128,28,28]三维数组
           layer_0.shape
   
           sects = list()  # 创建一个空列表
-          for row_start in range(layer_0.shape[1] - kernel_rows): # 卷积核行移动范围是是从0到图片行数减去卷积核行数
+          for row_start in range(layer_0.shape[1] - kernel_rows):  # 卷积核行移动范围是是从0到图片行数减去卷积核行数
               for col_start in range(layer_0.shape[2] - kernel_cols):
-                  sect = get_image_section(layer_0, row_start, row_start + kernel_rows, col_start, col_start + kernel_cols) # [128, 1, 3, 3]
+                  sect = get_image_section(layer_0, row_start, row_start + kernel_rows, col_start,
+                                           col_start + kernel_cols)  # [128, 1, 3, 3]
                   sects.append(sect)  # 将每一个卷积核范围内的矩阵加入列表
   
-          expanded_input = np.concatenate(sects,axis=1)   # 合并数组 [128,625,3,3]
+          expanded_input = np.concatenate(sects, axis=1)  # 合并数组 [128,625,3,3]
           es = expanded_input.shape
-          flattened_input = expanded_input.reshape(es[0] * es[1], -1)
+          flattened_input = expanded_input.reshape(es[0] * es[1], -1)  # -1代表自适应，因为原来是[128,625,3,
+          # 3]，当前面相乘之后，-1只能是9了
   
-          kernel_output = flattened_input.dot(kernels)    # [128*625,-1] * [9,16]
-          layer_1 = tanh(kernel_output.reshape(es[0],-1)) # [128,-1]
-          dropout_mask = np.random.randint(2,size=layer_1.shape)
+          kernel_output = flattened_input.dot(kernels)  # [128*625,-1] * [9,16]
+          layer_1 = tanh(kernel_output.reshape(es[0], -1))  # [128,-1]
+          dropout_mask = np.random.randint(2, size=layer_1.shape)
           layer_1 *= dropout_mask
-          layer_2 = softmax(np.dot(layer_1,weights_1_2))
+          layer_2 = softmax(np.dot(layer_1, weights_1_2))
   
           # 计算正确的量
           for k in range(batch_size):
-              labelset = labels[batch_start + k : batch_start +k + 1]
-              _inc = int(np.argmax(layer_2[k:k+1]) == np.argmax(labelset))
+              labelset = labels[batch_start + k: batch_start + k + 1]
+              _inc = int(np.argmax(layer_2[k:k + 1]) == np.argmax(labelset))
               correct_cnt += _inc
   
           # 调整权重
-          layer_2_delta = (labels[batch_start:batch_end] - layer_2) / (batch_size * layer_2.shape[0])
+          layer_2_delta = (labels[batch_start:batch_end] - layer_2) / (batch_size * layer_2.shape[0]) # fix
           layer_1_delta = layer_2_delta.dot(weights_1_2.T) * tanh2deriv(layer_1)
           layer_1_delta *= dropout_mask
           weights_1_2 += alpha * layer_1.T.dot(layer_2_delta)
           l1d_reshape = layer_1_delta.reshape(kernel_output.shape)
           k_update = flattened_input.T.dot(l1d_reshape)
           kernels -= alpha * k_update
-      if(j % 1 == 0):
-          print("Train_Acc:" + str(correct_cnt/float(len(images))))
+      if (j % 1 == 0):
+          print("Train_Acc:" + str(correct_cnt / float(len(images))))
+  
   ```
 
   
