--- a/Java/九.输入输出.md
+++ b/Java/九.输入输出.md
@@ -1,5 +1,62 @@
 # 九.输入输出
 
+- Types
+
+  - 字节流
+
+    <!--8位通用字节流，所有文件都能读写-->
+
+    1. 字节输入流InputStream基类
+    2. 字节输出流Output基类
+
+  - 字符流
+
+    <!--16位Unicode字符流，只能针对字符文件读写-->
+
+    1. 字符输入流Reader基类
+    2. 字符输出流Writer基类
+
+  - 使用规则
+
+    - To read or write byte data, use a class whose name ends in InputStream or OutputStream e.g. FileInputStream, DataOutputStream
+    - To read or write character data, use a class whose name ends in Reader or Writer e.g. StringReader, PrintWriter
+
+- Rules
+
+  - 读取或写入完成之后，需要调用close()方法。
+  - 缓存输出时需要flush()，强制将所有内容都写入。如果使用close()会自动执行flush方法。
+  - 字节流和字符流的区别：用字节流读取中文的时候，可能会出现乱码，而用字符流则不会出现乱码，而且用字符流读取的速度比字节流要快
+
+## 子类
+
+- InputStream和OutputStream的子类
+
+  - 字节流：FileInputStream和FileOutputStream
+  - 缓冲流：BufferedInputStream和BufferedOutputStream
+  - 数据流：DataInputStream和DataOutputStream
+  - 对象流：ObjectInputStream和ObjectOutputStream
+
+- 常用子类
+
+  - 文件读写
+
+    - 字节流：FileInputStream,FileOutputStream
+
+    - 字符流：BufferedReader,BufferedWriter
+
+      <!--缓存可以说是I/O的一种性能优化，缓存流为I/O流增加了内存缓存区-->
+
+  - 二进制文件读写
+
+    <!--富文本，音频，视频等-->
+
+    - 字节流：DataInputStream,DataOutputStream
+
+  - 其他
+
+    - PrintWriter。构造方法第二个参数是`autoFlush` - A boolean; if true, the `println`, `printf`, or `format` methods will flush the output buffer
+    - FileWriter。构造方法第二个参数是`append` - boolean if `true`, then data will be written to the end of the file rather than the beginning.
+
 ## 1. 读取输入
 
 - 方法：构造Scanner对象，并与“标准输入流”System.in关联
