--- a/Neural Network/10.卷积神经网络概论：关于边与角的神经学习.md
+++ b/Neural Network/10.卷积神经网络概论：关于边与角的神经学习.md
@@ -1,6 +1,10 @@
+Fix
+
 # 10.卷积神经网络概论：关于边与角的神经学习
 
 - Principle：将许多小线性神经元层在各处重用。
+
+- 网络结构的技巧：当神经网络需要在多处使用相同的想法时，尝试在这些地方使用相同的权重，提高泛化能力。
 
 - Rules
 
@@ -153,8 +157,8 @@
           flattened_input = expanded_input.reshape(es[0] * es[1], -1)  # -1代表自适应，因为原来是[128,625,3,
           # 3]，当前面相乘之后，-1只能是9了
   
-          kernel_output = flattened_input.dot(kernels)  # [128*625,-1] * [9,16]
-          layer_1 = tanh(kernel_output.reshape(es[0], -1))  # [128,-1]
+          kernel_output = flattened_input.dot(kernels)  # [128*625,9] * [9,16] = [80000,16]
+          layer_1 = tanh(kernel_output.reshape(es[0], -1))  # [128,10000]
           dropout_mask = np.random.randint(2, size=layer_1.shape)
           layer_1 *= dropout_mask
           layer_2 = softmax(np.dot(layer_1, weights_1_2))
@@ -166,15 +170,58 @@
               correct_cnt += _inc
   
           # 调整权重
-          layer_2_delta = (labels[batch_start:batch_end] - layer_2) / (batch_size * layer_2.shape[0]) # fix
+          layer_2_delta = (labels[batch_start:batch_end] - layer_2) / (
+                      batch_size * layer_2.shape[0])  # fix
           layer_1_delta = layer_2_delta.dot(weights_1_2.T) * tanh2deriv(layer_1)
           layer_1_delta *= dropout_mask
           weights_1_2 += alpha * layer_1.T.dot(layer_2_delta)
           l1d_reshape = layer_1_delta.reshape(kernel_output.shape)
           k_update = flattened_input.T.dot(l1d_reshape)
           kernels -= alpha * k_update
-      if (j % 1 == 0):
-          print("Train_Acc:" + str(correct_cnt / float(len(images))))
+  
+      # 测试集
+      test_correct_cnt = 0
+  
+      for i in range(len(test_images)):
+  
+          layer_0 = test_images[i:i + 1]
+          #         layer_1 = tanh(np.dot(layer_0,weights_0_1))
+          layer_0 = layer_0.reshape(layer_0.shape[0], 28, 28)
+          layer_0.shape
+  
+          sects = list()
+          for row_start in range(layer_0.shape[1] - kernel_rows):
+              for col_start in range(layer_0.shape[2] - kernel_cols):
+                  sect = get_image_section(layer_0,
+                                           row_start,
+                                           row_start + kernel_rows,
+                                           col_start,
+                                           col_start + kernel_cols)
+                  sects.append(sect)
+  
+          expanded_input = np.concatenate(sects, axis=1)
+          es = expanded_input.shape
+          flattened_input = expanded_input.reshape(es[0] * es[1], -1)
+  
+          kernel_output = flattened_input.dot(kernels)
+          layer_1 = tanh(kernel_output.reshape(es[0], -1))
+          layer_2 = np.dot(layer_1, weights_1_2)
+  
+          test_correct_cnt += int(np.argmax(layer_2) ==
+                                  np.argmax(test_labels[i:i + 1]))
+      if j % 1 == 0:
+          sys.stdout.write("\n" + \
+                           "I:" + str(j) + \
+                           " Test-Acc:" + str(test_correct_cnt / float(len(test_images))) + \
+                           " Train-Acc:" + str(correct_cnt / float(len(images))))
+  
+  ```
+
+  ```shell
+  # Analyse
+  1.思路
+  	1.结构是第零层是原图片，第一层是所有卷积核计算出的结果拼接，第二层是第一层乘以权重
+  	2.就是用卷积层计算出的值代替原来的第一层，没有池化。
   ```
 
   
