--- a/Java/八.泛型程序设计.md
+++ b/Java/八.泛型程序设计.md
@@ -1,8 +1,65 @@
 # 八.泛型程序设计
 
-1. T 意味某种类型  
-2. E 意味 链表、数组里的元素，如List<E> list 表示 list 里的元素。
-3. K意味map(k,v) 里的键值 Key
-4. V 意味 返回或映射的值
 5. < ? extends F> 代表任何继承F的类
+
+- Purpose
+  - 使得代码能够让不同类型的对象重用
+- Advantage（使用参数函数 type parameters）
+  - 避免使用Object时，需要强制类型转换而出现的问题。
+
+## 泛型类
+
+- Definition：具有一个或多个类型变量的类。
+
+- Rules
+
+  - T（需要时还可以用临近的字母U，S）表示任意类型。  
+
+  - E表示集合的元素类型。如List<E> list 表示 list 里的元素。
+
+  - K，V分别表示表的关键字与值的类型。
+
+  - 使用具体的类型替换类型变量就可以实例化泛型类型。
+
+    ```
+    泛型类型：Pair<T>
+    实例化泛型类型：Pair<String>
+    ```
+
+- Implementation
+
+  <!--定义泛型类-->
+
+  ```java
+  public class Pair<T> {
+      private T first;
+      private T second;
+  
+      public Pair() {
+          first = null;
+          second = null;
+      }
+  
+      public Pair(T first , T second) {
+          this.first = first;
+          this.second = second;
+      }
+  
+      public T getFirst() {
+          return first;
+      }
+      public void setFirst(T first) {
+          this.first = first;
+      }
+  
+      public T getSecond() {
+          return second;
+      }
+      public void setSecond(T second) {
+          this.second = second;
+      }
+  }
+  ```
+
+  
 
